add more tables to erase/restore api (1 left)